fix white space

--- a/src/css/desktop/Popup.scss
+++ b/src/css/desktop/Popup.scss
@@ -139,6 +139,7 @@ div #rewardsBox {
 	font-weight: normal;
 	text-decoration: none;
 	font-style: normal;
+	white-space: break-spaces;
 }
 
 #popDesc a {
