--- a/src/css/mobile/Popup.scss
+++ b/src/css/mobile/Popup.scss
@@ -161,6 +161,7 @@ div #rewardsBox {
 	font-weight: normal;
 	text-decoration: none;
 	font-style: normal;
+	white-space: break-spaces;
 }
 
 #popDesc a {
